[package]
name = "repath"
version = "0.0.6"
edition = "2021"
authors = ["Jaroslav Patočka <patockajaroslav@gmail.com>"]
description = "A fast pathfinding library using A* algorithm, caching and precomputation."
readme = "README.md"
keywords = ["pathfinding", "game", "server", "gameserver", "navmesh"]
categories = ["game-development", "algorithms", "data-structures"]
license = "MIT"
repository = "https://github.com/Abyssall-Dev/RePath"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rayon = "1.10.0"
lru = "0.12.3"
rand = "0.8.5"
bincode = "1.3.3"
csv = "1.3.0"
