[package]
name = "repath"
version = "0.1.0"
edition = "2021"
authors = ["Jaroslav Patočka <patockajaroslav@gmail.com>"]
description = "A fast pathfinding library using A* algorithm, caching, precomputation and path segmentation with concurrent pathfinding."
readme = "README.md"
keywords = ["pathfinding", "game", "server", "gameserver", "navmesh"]
categories = ["game-development", "algorithms", "data-structures"]
license = "MIT"
repository = "https://github.com/Abyssall-Dev/RePath"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rayon = "1.10.0"
dashmap = "6.1.0"
rand = "0.8.5"
bincode = "1.3.3"
csv = "1.3.1"
